--- a/index.html
+++ b/index.html
@@ -12,20 +12,22 @@
     <link rel="stylesheet" href="./css/styles.css">
 </head>
 <body>
-    <header>
+    <header class="header">
         <div class="container">
-            <nav>
-                <a href="./index.html">
-                    <img src="./images/logo.svg" alt="Логотип сучасної пекарні">
-                </a>
-                <ul>
-                    <li><a class="link" href="#traditions-section">Наші традиції</a></li>
-                    <li><a class="link" href="#chefs-section">Шеф-кухарі</a></li>
-                    <li><a class="link" href="#formats-section">Формати</a></li>
-                    <li><a class="link" href="#contact-section">Контакти</a></li>
-                </ul>
-            </nav>
-            <button class="button" type="button">Замовити дзвінок</button>
+            <div class="header-container">
+                <nav class="header-nav">
+                    <a href="./index.html">
+                        <img src="./images/logo.svg" alt="Логотип сучасної пекарні">
+                    </a>
+                    <ul class="header-menu">
+                        <li><a class="link" href="#traditions-section">Наші традиції</a></li>
+                        <li><a class="link" href="#chefs-section">Шеф-кухарі</a></li>
+                        <li><a class="link" href="#formats-section">Формати</a></li>
+                        <li><a class="link" href="#contact-section">Контакти</a></li>
+                    </ul>
+                </nav>
+                <button class="button" type="button">Замовити дзвінок</button>
+            </div>
         </div>
     </header>
     <main>
@@ -34,7 +36,7 @@
                 <h1 class="hero-title"><span class="accent">Сучасна</span> пекарня</h1>
             </div>
         </section>
-        <section>
+        <section class="advantages-section">
             <div class="container">
                 <h2 class="visually-hidden">Наші переваги</h2>
                 <ul class="advantages-list">
@@ -46,26 +48,32 @@
         </section>
         <section class="traditions-section section" id="traditions-section">
             <div class="container">
-                <h2 class="traditions-title section-title">Новий формат традицій</h2>
-            <p class="traditions-text">
-                <span class="brand uppercase">shop bakery</span> — це пекарня, яка взяла все найкраще, і зберегла смак
-                традиційної випічки та натуральність інгредієнтів.
-            </p>
-            <p class="traditions-text">
-                Ми працюємо як найвідоміші мережі —
-                <span class="brand">5 хвилин і замовлення готове.</span>
-                А ще у наших пекарень стильний дизайн
-                та висока якість обслуговування!
-            </p>
-            <img src="./images/bacer-man.jpg" alt="Чоловік пекар дивиться на батони із посмішкою">
+                <div class="traditions-container">
+                    <div class="traditions-content">
+                        <h2 class="traditions-title section-title">Новий формат традицій</h2>
+                        <p class="traditions-text">
+                            <span class="brand uppercase">shop bakery</span> — це пекарня, яка взяла все найкраще, і зберегла смак
+                            традиційної випічки та натуральність інгредієнтів.
+                        </p>
+                        <p class="traditions-text limited">
+                            Ми працюємо як найвідоміші мережі —<br>
+                            <span class="brand">5 хвилин і замовлення готове</span>. <br>
+                            А ще у наших пекарень стильний дизайн та висока якість обслуговування!
+                        </p>
+                    </div>
+                    <img src="./images/bacer-man.jpg" alt="Чоловік пекар дивиться на батони із посмішкою">
+                </div>
             </div>
         </section>
         <section class="section" id="chefs-section">
             <div class="container">
-                <h2 class="chefs-title section-title">Наші найкращі <span class="accent">шеф-кухарі</span></h2>
+                <h2 class="chefs-title section-title centered">
+                    Наші найкращі <span class="accent">шеф-кухарі</span></h2>
                 <ul>
                     <li>
                         <article>
+                            <img class="chef-photo"
+                             src="./images/nastya-chef.jpg" alt="Nastya-chef">
                             <h3 class="chef-title">Настя</h3>
                             <p>Привіт, я Настя!</p>
                             <p>Вже 10 років, я свтілюю
@@ -76,6 +84,8 @@
                     </li>
                     <li>
                         <article>
+                            <img class="chef-photo"
+                             src="./images/vlad-chef.jpg" alt="Vlad-chef">
                             <h3 class="chef-title">Влад</h3>
                             <p>Привіт, я Влад!</p>
                             <p>Мій кодитерський стаж вже 18 років. SHOP BEKERY - це наша любов,
@@ -87,44 +97,61 @@
             </div>
         </section>
         <section class="section" id="formats-section">
-            <div class="container">
-                
-            <h2 class="formats-title section-title">Формати</h2>
-           <ul>
-            <li>
-                <article>
+            <div class="container">    
+            <h2 class="formats-title section-title centered">Формати</h2>
+            <button class="carousel-button" type="button">
+                <svg width="16" height="16">
+                    <use href="./images/icons.svg#icon-arrow"></use>
+                </svg>
+                </a>
+            </button>
+           <ul class="formats-list">
+            <li class="formats-item">
+                <article class="format-card">
                 <h3 class="format-title" lang="en">Walrus</h3>
                 <div class="format-text">
                     <p>Площа: до 120 м2</p>
                     <p>Меню: розширене меню</p>
-                    <p>Штат: 2 продавці-касири, 2 пекарі, 2 помічники пекаря, 2 офіціанти-різнороби</p>
+                    <p>
+                        Штат: 2 продавці-касири, 2 пекарі, 2 помічники пекаря, 2 
+                        офіціанти-різнороби</p>
                     <p>Посадкові місця: є</p>
                 </div>
             </article>
         </li>
-            <li>
-                <article>
+            <li class="formats-item">
+                <article class="format-card">
                 <h3 class="format-title" lang="en">Horseshoe</h3>
                 <div class="format-text">
                     <p>Площа: до 25 м2</p>
                     <p>Меню: найпопулярніші позиції меню</p>
-                    <p>Штат: 2 продавці-касири, 2 пекарі, 1 помічник пекаря</p>
+                    <p>
+                        Штат: 2 продавці-касири, 2 пекарі, 1 
+                        помічник пекаря</p>
                     <p>Посадкові місця: відсутні</p>
                 </div>
             </article>
         </li>
-            <li>
-                <article>
+            <li class="formats-item">
+                <article class="format-card">
                 <h3 class="format-title" lang="en">Handlebar</h3>
                 <div class="format-text">
                     <p>Площа: до 15 м2</p>
                     <p>Меню: найпопулярніші позиції меню</p>
-                    <p>Штат: 1 продавець, 1 пекар, 1 помічник пекаря</p>
+                    <p>
+                        Штат: 1 продавець, 1 пекар, 1 
+                        помічник пекаря</p>
                     <p>Посадкові місця: відсутні</p>
                 </div>
             </article>
         </li>
         </ul>
+        <button class="carousel-button" type="button">
+            <svg width="16" height="16">
+                <use href="./images/icons.svg#icon-arrow"></use>
+            </svg>
+            </a>
+        </button>
             </div>
         </section>
         <section class="section" id="contact-section">
@@ -140,7 +167,7 @@
             </div>
         </section>
     </main>
-    <footer>
+    <footer class="footer">
         <div class="container">
             <nav>
                 <a href="./index.html">
@@ -161,12 +188,16 @@
                             Україна, м. Київ, вул. Січових Стрільців 54</a></li>
                     <li>
                         <a href="#">
-                            <!-- facebook icon-->
+                            <svg class="address-icon" width="32" height="32">
+                                <use href="./images/icons.svg#icon-facebook"></use>
+                            </svg>
                         </a>
                     </li>
                     <li>
                         <a href="#">
-                            <!-- instagram icon-->
+                            <svg class="address-icon" width="32" height="32">
+                                <use href="./images/icons.svg#icon-instagram"></use>
+                            </svg>
                         </a>
                     </li>
                 </ul>
