--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                         <li><a class="link" href="#contact-section">Контакти</a></li>
                     </ul>
                 </nav>
-                <button class="button" type="button">Замовити дзвінок</button>
+                <button class="button modal-btn-open" type="button">Замовити дзвінок</button>
             </div>
         </div>
     </header>
@@ -68,7 +68,8 @@
         <section class="section" id="chefs-section">
             <div class="container">
                 <h2 class="chefs-title section-title centered">
-                    Наші найкращі <span class="accent">шеф-кухарі</span></h2>
+                    Наші найкращі <br>
+                    <span class="accent">шеф-кухарі</span></h2>
                 <ul class="chefs-list">
                     <li class="chefs-item">
                         <article class="chef-card">
@@ -227,5 +228,12 @@
             </div>
         </div>
     </footer>
+    <div class="backdrop">
+        <div class="modal">
+            <button class="modal-btn-close" type="button">Close</button>
+        </div>
+    </div>
+    
+    <script src="./js/modal.js"></script>
 </body>
 </html>
